[workspace]
members = [
  "basics/scrape_url",
  "basics/httpie",
  "basics/like_thumbor",
  "basics/queryer",
  "basics/queryer_py",
  "basics/queryer_js",
  "basics/07_ownership",
  "basics/08_borrow",
  "basics/09_multi_owner",
  "basics/10_lifetime",
  "basics/11_memory",
  "basics/12_types",
  "basics/13_types",
  "basics/14_traits",
  "basics/15_data_struct",
  "basics/16_collection"
]
default-members = ["basics/16_collection"]