[workspace]
members = [
  "basics/scrape_url",
  "basics/httpie",
  "basics/like_thumbor",
  "basics/queryer",
  "basics/queryer_py",
  "basics/queryer_js",
  "basics/07_ownership",
  "basics/08_borrow",
  "basics/09_multi_owner",
  "basics/10_lifetime",
  "basics/11_memory",
  "basics/12_types",
  "basics/13_types",
  "basics/14_traits",
  "basics/15_data_struct",
  "basics/16_collection",
  "basics/17_hash_map",
  "basics/18_handle_err",
  "basics/19_closure",
  "basics/21_kv",
  "read_file",
  "rgrep",
  # ----------------------
  "advanced/23_types",
  "advanced/24_trait_obj",
  "advanced/27_libs",
  "advanced/29_network",
  "advanced/30_unsaferust",
  "advanced/31_bzlib-sys",
  "advanced/32_xunmi-py",
  "advanced/33_concurrency",
  "advanced/35_mpsc_channel",
  "advanced/36_37_kv",
  "advanced/38_async",
  "advanced/39_async_inter",
  "advanced/40_async",
  "advanced/41_42_45_kv",
  "advanced/43_real_project",
  "advanced/44_data_processing",
  "advanced/46_architecture",
  "advanced/47_manual_macros",
  "advanced/48_builder_macros",
  # 其它自己练习
  "other/browser_engin",
  "other/blockchain_rust",
  "other/builder-lite"
]
default-members = ["other/builder-lite"]