[package]
name = "libs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.64.0", features = ["runtime","derive"] }
schemars = { version = "0.8.7" }
serde = { version = "1", features = ["derive"] }
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_22"] }