[package]
name = "borrow"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "borrow_1"
path = "./src/borrow_1.rs"

[[bin]]
name = "borrow_2"
path = "./src/borrow_2.rs"

[[bin]]
name = "borrow_3"
path = "./src/borrow_3.rs"

[[bin]]
name = "borrow_4"
path = "./src/borrow_4.rs"