[package]
name = "types"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "types_01"
path = "./src/types_01.rs"

[[bin]]
name = "types_02"
path = "./src/types_02.rs"

[[bin]]
name = "types_03"
path = "./src/types_03.rs"