[package]
name = "traits"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "traits_01"
path = "./src/traits_01.rs"

[[bin]]
name = "traits_02"
path = "./src/traits_02.rs"

[[bin]]
name = "traits_03"
path = "./src/traits_03.rs"

[[bin]]
name = "traits_04"
path = "./src/traits_04.rs"