[package]
name = "data_struct"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2"
serde = { version = "1",features = ["derive"] }
serde_json = "1"
rayon = "1"
lazy_static = "1"

[[bin]]
name = "data_struct_01"
path = "./src/data_struct_01.rs"

[[bin]]
name = "data_struct_02"
path = "./src/data_struct_02.rs"

[[bin]]
name = "data_struct_03"
path = "./src/data_struct_03.rs"

[[bin]]
name = "data_struct_04"
path = "./src/data_struct_04.rs"

[[bin]]
name = "data_struct_05"
path = "./src/data_struct_05.rs"

[[bin]]
name = "data_struct_06"
path = "./src/data_struct_06.rs"