[package]
name = "collection"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { version = "0.10.1" }

[[bin]]
name = "collection_01"
path = "./src/collection_01.rs"

[[bin]]
name = "collection_02"
path = "./src/collection_02.rs"

[[bin]]
name = "collection_03"
path = "./src/collection_03.rs"

[[bin]]
name = "collection_04"
path = "./src/collection_04.rs"

[[bin]]
name = "collection_05"
path = "./src/collection_05.rs"

[[bin]]
name = "collection_06"
path = "./src/collection_06.rs"

[[bin]]
name = "collection_07"
path = "./src/collection_07.rs"

[[bin]]
name = "window_count"
path = "./src/window_count.rs"