[package]
name = "hash_map"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "hash_map_01"
path = "./src/hash_map_01.rs"

[[bin]]
name = "hash_map_02"
path = "./src/hash_map_02.rs"

[[bin]]
name = "hash_map_03"
path = "./src/hash_map_03.rs"

[[bin]]
name = "hash_map_04"
path = "./src/hash_map_04.rs"